feat: some improvements and features were implemented on the project root [v1]

--- a/app/views/lessons/edit.html.erb
+++ b/app/views/lessons/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Editing lesson</h1>
 
-<%= render "form", lesson: @lesson %>
+<%= render "form", lesson: @lesson, course: @course %>
 
 <br>
 
