feat: some improvements and features were implemented on the project root [v1]

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,3 +8,5 @@
 
   <%= button_to "Destroy this course", @course, method: :delete %>
 </div>
+
+<%= turbo_frame_tag 'course-lesson-list', src: course_lessons_path(@course) %>
