--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
       <th>Id</th>
       <th>Title</th>
       <th>Description</th>
-      <th colspan="4"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -18,6 +18,7 @@
         <td><%= course.id %></td>
         <td><%= course.title %></td>
         <td><%= course.description %></td>
+        <td><%= link_to 'Lessons', course_lessons_path(course) %></td>
         <td><%= link_to 'Show', course %></td>
         <td><%= link_to 'Edit', edit_course_path(course) %></td>
         <td><%= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' } %></td>
