--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -2,31 +2,34 @@
 
 <% content_for :title, "Lessons" %>
 
-<h1>Lessons</h1>
+<%= turbo_frame_tag 'course-lesson-list' do %>
+  <h1>Lessons</h1>
 
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Course</th>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @lessons.each do |lesson| %>
+  <table class='table'>
+    <thead>
       <tr>
-        <td><%= lesson.course_id %></td>
-        <td><%= lesson.title %></td>
-        <td><%= lesson.content %></td>
-        <td><%= link_to 'Show', [@course,lesson] %></td>
-        <td><%= link_to 'Edit', edit_course_lesson_path(@course,lesson) %></td>
-        <td><%= link_to 'Destroy', [@course,lesson], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Course</th>
+        <th>Title</th>
+        <th>Content</th>
+        <th colspan="4"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @lessons.each do |lesson| %>
+        <tr>
+          <td><%= lesson.course_id %></td>
+          <td><%= lesson.title %></td>
+          <td><%= lesson.content %></td>
+          <td><%= link_to 'Questions', lesson_questions_path(lesson), target: '_top' %></td>
+          <td><%= link_to 'Show', [@course,lesson], target: '_top' %></td>
+          <td><%= link_to 'Edit', edit_course_lesson_path(@course,lesson), target: '_top' %></td>
+          <td><%= link_to 'Destroy', [@course,lesson], method: :delete, data: { confirm: 'Are you sure?' }, target: '_top' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
 
 <br>
 
