--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,30 +2,31 @@
 
 <% content_for :title, "Questions" %>
 
-<h1>Questions</h1>
+<%= turbo_frame_tag 'lesson-question-list' do %>
+  <h1>Questions</h1>
 
-<table class='table'>
-  <thead>
-    <tr>
-      <th>Lesson</th>
-      <th>Content</th>
-      <th colspan="4"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @questions.each do |question| %>
+  <table class='table'>
+    <thead>
       <tr>
-        <td><%= question.lesson_id %></td>
-        <td><%= question.content %></td>
-        <td><%= link_to 'Show', lesson_question_path(question.lesson_id, question.id) %></td>
-        <td><%= link_to 'Edit', edit_lesson_question_path(question.lesson_id, question) %></td>
-        <td><%= link_to 'Destroy', lesson_question_path(question.lesson_id, question.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Lesson</th>
+        <th>Content</th>
+        <th colspan="4"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
+    <tbody id='question-list'>
+      <% @questions.each do |question| %>
+        <tr>
+          <td><%= question.lesson_id %></td>
+          <td><%= question.content %></td>
+          <td><%= link_to 'Show', lesson_question_path(question.lesson_id, question.id), target: '_top' %></td>
+          <td><%= link_to 'Edit', edit_lesson_question_path(question.lesson_id, question), target: '_top' %></td>
+          <td><%= link_to 'Destroy', lesson_question_path(question.lesson_id, question.id), method: :delete, data: { confirm: 'Are you sure?' }, target: '_top' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% end %>
 <br>
 
 <%= link_to "New question", new_lesson_question_path(@lesson) %>
