--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,8 +1,10 @@
 <% content_for :title, "New question" %>
 
-<h1>New question</h1>
+<%= turbo_frame_tag 'lesson-question-new' do %>
+  <h1>New question</h1>
 
-<%= render "form", question: @question, lesson: @lesson %>
+  <%= render "form", question: @question, lesson: @lesson %>
+<% end %>
 
 <br>
 
