feat: some improvements and features were implemented on the project root [v1]

--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -11,6 +11,10 @@
 
 <hr/>
 
+<%= turbo_stream_from @lesson %>
+
+<hr/>
+
 <%= turbo_frame_tag 'lesson-question-new', src: new_lesson_question_path(@lesson) %>
 
 <hr/>
