--- a/app/views/questions/create.turbo_stream.erb
+++ b/app/views/questions/create.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.append('question-list', @question)%>
+<%# turbo_stream.append('question-list', @question)%>
 
 <%= turbo_stream.replace 'lesson-question-new' do%>
     <%= turbo_frame_tag 'lesson-question-new' do %>
