feat: some improvements and features were implemented on the project root [v1]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <%= link_to('Courses', courses_path, class: "nav-link") %>
       </li>
 
-      <li class="nav-item">
+      <li class="nav-item" style="cursor">
         <div class='nav-link' id='something' data-turbo-permanent data-controller='counter' data-action='click->counter#increment'>
           0
         </div>
